2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented copy-list, reverse, nreverse, ldiff and flatten.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented reduce-left and reduce-right.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35010

	* match.c (extract_bindings): Make sure there are no duplicate
	variables among the extracted bindings. This is needed because
	of the other changes.
	(do_output_line, do_output): In handling the rep/repeat directives,
	append the original bindings to the extracted set bindings for the
	variables which just occur in the clause, so that Lisp code can see all
	of the variables.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): If width is specified for ~s or ~a, and
	the object is not a string or number, then print it to a string
	and treat it as a string, adjusting it within the field.
	Also, do not simply abort on an unknown format directive
	but throw a proper exception.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Left-adjusted field is now  specified
	using < rather than '-'. The +, space and leading 0 are
	specified on the precision, not the width.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* rand.c (random): Fix for 64 bit fixnums: stick two random numbers
	together. Otherwise for fixnum moduli, we get only a 32 bit number no
	matter what the modulus is.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Combine ~a and ~s cases, so numbers and
	strings are printed the same way under ~s and ~a.  The only difference
	is printing other kinds of objects.

2011-12-22  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35026

	* stream.c (format_num): New argument: sign character.
	Rewrote to handle precision, width, zero padding and
	leading sign similarly to printf.
	(vformat): New syntax accepted: a space or + before
	the width specifies that a positive sign is to be
	explicitly written as a space or + character.